--- a/packages/repl/package.json
+++ b/packages/repl/package.json
@@ -2,46 +2,67 @@
   "name": "@isl-lang/repl",
   "version": "0.1.0",
   "description": "Interactive REPL for exploring ISL specifications",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "bin": {
-    "isl-repl": "./dist/cli.js"
+  "author": "ISL Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/isl-lang/isl.git",
+    "directory": "packages/repl"
   },
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
-    }
-  },
-  "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "start": "node dist/cli.js",
-    "test": "vitest run",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "@types/node": "^20.11.0",
-    "typescript": "^5.3.0",
-    "vitest": "^1.2.0"
+  "homepage": "https://isl-lang.dev/docs/repl",
+  "bugs": {
+    "url": "https://github.com/isl-lang/isl/issues"
   },
   "keywords": [
     "isl",
     "repl",
+    "interactive",
     "cli",
-    "interactive"
+    "intent-specification"
   ],
-  "license": "MIT",
-  "author": "mevla",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/guardiavault-oss/ISL-LANG.git"
+  "engines": {
+    "node": ">=18.0.0"
   },
-  "homepage": "https://intentlang.dev",
-  "bugs": {
-    "url": "https://github.com/guardiavault-oss/ISL-LANG/issues"
+  "type": "module",
+  "bin": {
+    "isl-repl": "./dist/cli.js"
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "start": "node dist/cli.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "lint": "eslint src --ext .ts",
+    "typecheck": "tsc --noEmit",
+    "clean": "rimraf dist",
+    "prepublishOnly": "pnpm run build && pnpm run test"
+  },
+  "dependencies": {
+    "@isl-lang/parser": "workspace:*",
+    "@isl-lang/typechecker": "workspace:*",
+    "@isl-lang/evaluator": "workspace:*"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.0",
+    "rimraf": "^5.0.5",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.0",
+    "vitest": "^1.2.0"
   }
 }
