--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,10 +166,10 @@ jobs:
         run: pnpm install --frozen-lockfile
         
       - name: Build parser
-        run: pnpm --filter @intentos/parser build
+        run: pnpm --filter @isl-lang/parser build
         
       - name: Run parser tests with coverage
-        run: pnpm --filter @intentos/parser test:coverage || pnpm --filter @intentos/parser test
+        run: pnpm --filter @isl-lang/parser test:coverage || pnpm --filter @isl-lang/parser test
         env:
           CI: true
           
@@ -211,10 +211,10 @@ jobs:
         run: pnpm install --frozen-lockfile
         
       - name: Build typechecker
-        run: pnpm --filter @intentos/typechecker build
+        run: pnpm --filter @isl-lang/typechecker build
         
       - name: Run typechecker tests with coverage
-        run: pnpm --filter @intentos/typechecker test:coverage || pnpm --filter @intentos/typechecker test
+        run: pnpm --filter @isl-lang/typechecker test:coverage || pnpm --filter @isl-lang/typechecker test
         env:
           CI: true
           
@@ -340,7 +340,7 @@ jobs:
         run: pnpm build
         
       - name: Run E2E tests
-        run: pnpm --filter @intentos/cli test || echo "CLI E2E tests not configured"
+        run: pnpm --filter @isl-lang/cli test || echo "CLI E2E tests not configured"
         env:
           CI: true
         timeout-minutes: 5
