--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,32 +2,64 @@
   "name": "@isl-lang/cli",
   "version": "0.1.0",
   "description": "Command-line interface for ISL (Intent Specification Language)",
+  "author": "ISL Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/isl-lang/isl.git",
+    "directory": "packages/cli"
+  },
+  "homepage": "https://isl-lang.dev/docs/cli",
+  "bugs": {
+    "url": "https://github.com/isl-lang/isl/issues"
+  },
+  "keywords": [
+    "isl",
+    "intent-specification-language",
+    "cli",
+    "ai",
+    "verification",
+    "code-generation"
+  ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "type": "module",
   "bin": {
-    "isl": "dist/index.js"
+    "isl": "./dist/index.js"
   },
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "files": [
     "dist",
-    "templates"
+    "templates",
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --clean",
-    "dev": "tsup src/index.ts --format esm --dts --watch",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "lint": "eslint src --ext .ts",
     "typecheck": "tsc --noEmit",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "prepublishOnly": "pnpm run build && pnpm run test"
   },
   "dependencies": {
-    "@isl-lang/isl-ai": "workspace:*",
-    "@isl-lang/isl-compiler": "workspace:*",
-    "@isl-lang/isl-core": "workspace:*",
-    "@isl-lang/isl-verify": "workspace:*",
-    "@isl-lang/repl": "workspace:*",
+    "@isl-lang/parser": "workspace:*",
     "@isl-lang/typechecker": "workspace:*",
+    "@isl-lang/evaluator": "workspace:*",
+    "@isl-lang/repl": "workspace:*",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "ora": "^8.0.1",
@@ -40,25 +72,5 @@
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "vitest": "^1.2.0"
-  },
-  "keywords": [
-    "isl",
-    "intent-specification-language",
-    "cli",
-    "ai",
-    "verification"
-  ],
-  "author": "mevla",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/guardiavault-oss/ISL-LANG.git"
-  },
-  "homepage": "https://intentlang.dev",
-  "bugs": {
-    "url": "https://github.com/guardiavault-oss/ISL-LANG/issues"
-  },
-  "directories": {
-    "test": "tests"
   }
 }
