--- a/packages/lsp-core/package.json
+++ b/packages/lsp-core/package.json
@@ -1,14 +1,53 @@
 {
   "name": "@isl-lang/lsp-core",
   "version": "0.1.0",
-  "description": "Core language intelligence for ISL LSP",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "Core language intelligence for ISL LSP - shared analysis and diagnostics",
+  "author": "ISL Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/isl-lang/isl.git",
+    "directory": "packages/lsp-core"
+  },
+  "homepage": "https://isl-lang.dev/docs/lsp-core",
+  "bugs": {
+    "url": "https://github.com/isl-lang/isl/issues"
+  },
+  "keywords": [
+    "isl",
+    "lsp",
+    "language-intelligence",
+    "diagnostics",
+    "completion"
+  ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "test": "vitest run",
-    "typecheck": "tsc --noEmit"
+    "test:watch": "vitest",
+    "lint": "eslint src --ext .ts",
+    "typecheck": "tsc --noEmit",
+    "clean": "rimraf dist",
+    "prepublishOnly": "pnpm run build && pnpm run test"
   },
   "dependencies": {
     "@isl-lang/parser": "workspace:*",
@@ -16,22 +55,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "rimraf": "^5.0.5",
+    "tsup": "^8.0.1",
     "typescript": "^5.3.0",
     "vitest": "^1.2.0"
-  },
-  "keywords": [
-    "isl",
-    "lsp",
-    "language-intelligence"
-  ],
-  "license": "MIT",
-  "author": "mevla",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/guardiavault-oss/ISL-LANG.git"
-  },
-  "homepage": "https://intentlang.dev",
-  "bugs": {
-    "url": "https://github.com/guardiavault-oss/ISL-LANG/issues"
   }
 }
