--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,47 +1,62 @@
 {
   "name": "@isl-lang/parser",
   "version": "0.1.0",
-  "description": "ISL (Intent Specification Language) recursive descent parser",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "lint": "eslint src --ext .ts"
+  "description": "ISL (Intent Specification Language) recursive descent parser - transforms ISL source into AST",
+  "author": "ISL Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/isl-lang/isl.git",
+    "directory": "packages/parser"
+  },
+  "homepage": "https://isl-lang.dev/docs/parser",
+  "bugs": {
+    "url": "https://github.com/isl-lang/isl/issues"
   },
   "keywords": [
     "isl",
     "parser",
+    "ast",
+    "intent-specification",
     "dsl",
-    "intent-specification"
+    "recursive-descent"
   ],
-  "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {
-    "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
-    "vitest": "^1.0.0"
+  "engines": {
+    "node": ">=18.0.0"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.js"
+      "require": "./dist/index.cjs"
     }
   },
-  "author": "mevla",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/guardiavault-oss/ISL-LANG.git"
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint src --ext .ts",
+    "typecheck": "tsc --noEmit",
+    "clean": "rimraf dist",
+    "prepublishOnly": "pnpm run build && pnpm run test"
   },
-  "homepage": "https://intentlang.dev",
-  "bugs": {
-    "url": "https://github.com/guardiavault-oss/ISL-LANG/issues"
+  "dependencies": {},
+  "devDependencies": {
+    "@types/node": "^20.10.0",
+    "rimraf": "^5.0.5",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.0",
+    "vitest": "^1.0.0"
   }
 }
