--- a/packages/typechecker/package.json
+++ b/packages/typechecker/package.json
@@ -2,32 +2,62 @@
   "name": "@isl-lang/typechecker",
   "version": "0.1.0",
   "description": "Semantic analyzer for ISL - validates AST, resolves types, builds symbol table",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@isl-lang/errors": "workspace:*"
-  },
-  "devDependencies": {
-    "typescript": "^5.3.0",
-    "vitest": "^1.2.0"
-  },
-  "files": [
-    "dist"
-  ],
-  "author": "mevla",
+  "author": "ISL Team",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/guardiavault-oss/ISL-LANG.git"
+    "url": "https://github.com/isl-lang/isl.git",
+    "directory": "packages/typechecker"
   },
-  "homepage": "https://intentlang.dev",
+  "homepage": "https://isl-lang.dev/docs/typechecker",
   "bugs": {
-    "url": "https://github.com/guardiavault-oss/ISL-LANG/issues"
+    "url": "https://github.com/isl-lang/isl/issues"
+  },
+  "keywords": [
+    "isl",
+    "typechecker",
+    "semantic-analysis",
+    "type-system",
+    "intent-specification"
+  ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint src --ext .ts",
+    "typecheck": "tsc --noEmit",
+    "clean": "rimraf dist",
+    "prepublishOnly": "pnpm run build && pnpm run test"
+  },
+  "dependencies": {
+    "@isl-lang/parser": "workspace:*"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.0",
+    "rimraf": "^5.0.5",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.0",
+    "vitest": "^1.2.0"
   }
 }
