--- a/packages/intent-translator/package.json
+++ b/packages/intent-translator/package.json
@@ -19,6 +19,7 @@
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:integration": "vitest run --testPathPattern=integration",
     "typecheck": "tsc --noEmit",
     "clean": "rimraf dist"
   },
