feat(isl-core): Add @isl-bindings verification module
Add verification module that reads @isl-bindings blocks from implementation code and uses them as primary evidence for clause verification.

- parseBindings.ts: Parse @isl-bindings blocks from source code

- verifyFromBindings.ts: Verify clauses using explicit binding locations

- verifier.ts: Main verifier with structured clauseResults output

  - Returns { clauseId, status: PASS|PARTIAL|FAIL, evidence: bindings|heuristic, notes[] }

- Falls back to heuristic pattern matching when bindings are missing

- Added comprehensive test suite with fixtures (31 tests passing)

--- a/packages/isl-core/package.json
+++ b/packages/isl-core/package.json
@@ -9,6 +9,10 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./verification": {
+      "import": "./dist/isl-agent/verification/index.js",
+      "types": "./dist/isl-agent/verification/index.d.ts"
     }
   },
   "files": [
