--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,6 +17,10 @@
     "./scoring": {
       "import": "./dist/isl-agent/scoring/index.js",
       "types": "./dist/isl-agent/scoring/index.d.ts"
+    },
+    "./context": {
+      "import": "./dist/context/index.js",
+      "types": "./dist/context/index.d.ts"
     }
   },
   "files": [
