feat(cli): Add spec command with templates, list, and output options
Adds new isl spec command with:

- --templates flag to list all available spec templates

- --template <name> to create spec from template

- --out <path> to specify output file location

- --json flag for structured output for tooling

- --force flag to overwrite existing files

- --name flag to customize domain name

Includes 12 templates across categories:

- Starter: minimal, crud, api

- Domain: auth, payment, workflow

- Integration: webhook, graphql

- Pro: distributed, event-sourcing, ml-pipeline, compliance

Pro gating with consistent billing link: intentos.dev/billing

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,13 +21,21 @@
     "./context": {
       "import": "./dist/context/index.js",
       "types": "./dist/context/index.d.ts"
+    },
+    "./isl-lint": {
+      "import": "./dist/isl-lint/index.js",
+      "types": "./dist/isl-lint/index.d.ts"
+    },
+    "./isl-diff": {
+      "import": "./dist/isl-diff/index.js",
+      "types": "./dist/isl-diff/index.d.ts"
     }
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts src/evidence/index.ts src/isl-agent/scoring/index.ts --format esm --dts --clean",
+    "build": "tsup src/index.ts src/evidence/index.ts src/isl-agent/scoring/index.ts src/isl-lint/index.ts src/isl-diff/index.ts --format esm --dts --clean",
     "dev": "tsup src/index.ts src/evidence/index.ts --format esm --dts --watch",
     "test": "vitest run",
     "test:watch": "vitest",
