--- a/packages/isl-policy-packs/package.json
+++ b/packages/isl-policy-packs/package.json
@@ -25,13 +25,17 @@
     "./rate-limit": {
       "import": "./dist/packs/rate-limit.js",
       "types": "./dist/packs/rate-limit.d.ts"
+    },
+    "./intent": {
+      "import": "./dist/packs/intent.js",
+      "types": "./dist/packs/intent.d.ts"
     }
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts src/packs/auth.ts src/packs/payments.ts src/packs/pii.ts src/packs/rate-limit.ts --format esm --dts --clean",
+    "build": "tsup src/index.ts src/packs/auth.ts src/packs/payments.ts src/packs/pii.ts src/packs/rate-limit.ts src/packs/intent.ts --format esm --dts --clean",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "test": "vitest run",
     "test:watch": "vitest",
