feat: Scale infrastructure (10 → 100+ repos)
Golden Workflows:
- Next.js, Express, Fastify, NestJS, Hono templates
- Auto-detect framework from package.json
- Framework-specific CI configs

Multi-CI Support:
- GitLab CI
- Bitbucket Pipelines
- Azure DevOps
- CircleCI
- Jenkins

Enterprise Spine:
- Signed policy bundles
- Exception workflow (break-glass with expiry)
- Audit log export (JSON)

Intent Enforcement:
- Intent coverage metrics
- Intent mismatch detection
- @intent tags in code

Suppressions Enhanced:
- Expiry dates [expires:2026-03-01]
- Ticket URLs [ticket:JIRA-123]

Pricing Tiers:
- Free (OSS) - 25 rules, unlimited repos
- Team (/user) - Custom rules, audit
- Enterprise - Policy bundles, SSO, compliance

Marketplace Ready:
- GitHub Action metadata
- VS Code extension metadata

--- a/packages/vscode-islstudio/package.json
+++ b/packages/vscode-islstudio/package.json
@@ -1,19 +1,25 @@
 {
   "name": "vscode-islstudio",
   "displayName": "ISL Studio",
-  "description": "Block risky code before it ships. Auth, PII, payments, rate-limit checks.",
+  "description": "Block risky code before it ships. 25 rules for auth bypass, PII leaks, payment issues, and missing rate limits.",
   "version": "0.1.0",
   "publisher": "isl-studio",
   "icon": "icon.png",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/ISL-Studio/ISL-Studio-"
   },
+  "bugs": {
+    "url": "https://github.com/ISL-Studio/ISL-Studio-/issues"
+  },
+  "homepage": "https://islstudio.dev",
   "engines": {
     "vscode": "^1.85.0"
   },
   "categories": [
     "Linters",
+    "Programming Languages",
     "Other"
   ],
   "keywords": [
@@ -21,7 +27,22 @@
     "linter",
     "auth",
     "pii",
-    "gate"
+    "gate",
+    "typescript",
+    "javascript",
+    "code review",
+    "pull request"
+  ],
+  "galleryBanner": {
+    "color": "#1e1e1e",
+    "theme": "dark"
+  },
+  "badges": [
+    {
+      "url": "https://img.shields.io/npm/v/islstudio.svg",
+      "href": "https://www.npmjs.com/package/islstudio",
+      "description": "npm version"
+    }
   ],
   "activationEvents": [
     "onLanguage:typescript",
