--- a/packages/vscode-islstudio/package.json
+++ b/packages/vscode-islstudio/package.json
@@ -4,7 +4,6 @@
   "description": "Block risky code before it ships. 25 rules for auth bypass, PII leaks, payment issues, and missing rate limits.",
   "version": "0.1.0",
   "publisher": "isl-studio",
-  "icon": "icon.png",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -98,7 +97,5 @@
     "tsup": "^8.0.0",
     "typescript": "^5.3.0"
   },
-  "dependencies": {
-    "islstudio": "workspace:*"
-  }
+  "dependencies": {}
 }
