fix: Paper cuts + VS Code UX improvements
GitHub Action:
- Fixed cli-version default: 0.1.2
- Fixed rule count: 25 rules across 5 packs
- Updated v1 tag

VS Code Extension:
- Status pill: SHIP/NO_SHIP + score
- Problems panel diagnostics with click-to-explain
- Run Gate on Changed Files command
- Create/Use Baseline commands
- Quick fix actions (Explain, Suppress)

Framework Presets:
- Default to warn mode (not enforce)
- Enable SARIF upload by default
- Enable changed-only by default

Package fixes:
- Added workspace dependencies for bundling

--- a/packages/islstudio/package.json
+++ b/packages/islstudio/package.json
@@ -24,7 +24,11 @@
     "test": "vitest run",
     "prepublishOnly": "npm run build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@isl-lang/policy-packs": "workspace:*",
+    "@isl-lang/firewall": "workspace:*",
+    "@isl-lang/evidence": "workspace:*"
+  },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "tsup": "^8.0.1",
