feat: VibeCheck + ISL Studio integration
Unified firewall combining:
- VibeCheck truthpack validation (routes, env, contracts)
- ISL Studio policy packs (auth, pii, payments, rate-limit, intent)

Integration features:
- IntegratedFirewall class with combined evaluate()
- Single SHIP/NO_SHIP verdict from both engines
- Merged violation list with consistent types
- Config integration via vibecheck.config.mjs
- Evidence bundle generation
- SARIF output support

Policy packs included:
- auth/bypass-detected, auth/hardcoded-credentials
- pii/logged-sensitive-data, pii/console-in-production
- payments/client-side-amount, payments/missing-idempotency
- rate-limit/auth-endpoint
- intent/missing-error-handling

--- a/packages/vscode-islstudio/package.json
+++ b/packages/vscode-islstudio/package.json
@@ -3,7 +3,7 @@
   "displayName": "ISL Studio",
   "description": "Block risky code before it ships. 25 rules for auth bypass, PII leaks, payment issues, and missing rate limits.",
   "version": "0.1.0",
-  "publisher": "isl-studio",
+  "publisher": "ISL",
   "license": "MIT",
   "repository": {
     "type": "git",
