feat: Unified VibeCheck + ISL Studio VS Code extension v0.2.0
- Renamed to 'VibeCheck + ISL Studio'
- Updated description and keywords
- Bumped version to 0.2.0

Extension features:
- Status pill: SHIP/NO_SHIP + score
- Problems panel diagnostics
- Run Gate on Changed Files
- Create/Use Baseline commands
- Quick fixes (Explain, Suppress)

--- a/packages/vscode-islstudio/package.json
+++ b/packages/vscode-islstudio/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vscode-islstudio",
-  "displayName": "ISL Studio",
-  "description": "Block risky code before it ships. 25 rules for auth bypass, PII leaks, payment issues, and missing rate limits.",
-  "version": "0.1.0",
+  "displayName": "VibeCheck + ISL Studio",
+  "description": "Unified code gate. Truthpack validation (routes, env, imports) + 25 security rules (auth, pii, payments, rate-limit, intent). SHIP or NO_SHIP with evidence.",
+  "version": "0.2.0",
   "publisher": "ISL",
   "license": "MIT",
   "repository": {
@@ -24,13 +24,16 @@
   "keywords": [
     "security",
     "linter",
+    "vibecheck",
     "auth",
     "pii",
     "gate",
     "typescript",
     "javascript",
     "code review",
-    "pull request"
+    "pull request",
+    "ai-safety",
+    "truthpack"
   ],
   "galleryBanner": {
     "color": "#1e1e1e",
