feat: Production-ready code templates + CLI
The ISL Pipeline now generates code that passes semantic rules out of the box.

CLI Commands:
  isl-pipeline generate <prompt>   Generate code from natural language
  isl-pipeline verify <directory>  Verify code passes semantic rules
  isl-pipeline heal <directory>    Attempt to fix violations

Generated Code Features:
- Machine-checkable __isl_intents export
- auditAttempt() helper called on ALL exit paths
- Rate limit BEFORE body parsing
- No console.* - errors tracked via audit
- Proper error classes from ISL spec
- Test scaffolding with vitest

Semantic Rules (Real Checks):
- intent/audit-required: 80%+ HTTP responses must be audited
- intent/rate-limit-required: Must be before body parse
- intent/no-pii-logging: No console.* with PII fields
- quality/no-stubbed-handlers: No stubs can ship
- quality/validation-before-use: Validate before use

Example:
  isl-pipeline generate 'Write me a login' --dry-run

Result:
  Score: 100/100
  Verdict: SHIP
  Files: route.ts, route.test.ts, auth.isl

--- a/packages/isl-pipeline/package.json
+++ b/packages/isl-pipeline/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "isl-pipeline": "./dist/cli.js"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -13,9 +16,10 @@
   },
   "files": ["dist"],
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --clean",
-    "dev": "tsup src/index.ts --format esm --dts --watch",
+    "build": "tsup src/index.ts src/cli.ts --format esm --dts --clean",
+    "dev": "tsup src/index.ts src/cli.ts --format esm --dts --watch",
     "demo": "tsx demo.ts",
+    "cli": "tsx src/cli.ts",
     "test": "vitest run"
   },
   "dependencies": {
