fix: auto-reset database on failed migrations to resolve Railway deployment

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -77,7 +77,8 @@
   "optionalDependencies": {
     "@isl-lang/isl-smt": "workspace:*",
     "@isl-lang/pbt": "workspace:*",
-    "@isl-lang/verifier-temporal": "workspace:*"
+    "@isl-lang/verifier-temporal": "workspace:*",
+    "@isl-lang/spec-assist": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^25.1.0",
