chore(cli): fix README GitHub URL, add CHANGELOG v2.1.0, include CHANGELOG in package files

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,6 +45,7 @@
     "dist",
     "dist/cli.cjs",
     "README.md",
+    "CHANGELOG.md",
     "LICENSE",
     "scripts/postinstall.js"
   ],
@@ -98,11 +99,13 @@
     "@isl-lang/isl-discovery": "workspace:*",
     "@isl-lang/isl-certificate": "workspace:*",
     "@isl-lang/isl-coverage": "workspace:*",
+    "@isl-lang/verify-pipeline": "workspace:*",
+    "@isl-lang/pbt": "workspace:*",
+    "@isl-lang/mutation-testing": "workspace:*",
     "@isl-lang/isl-ship":"workspace:*",
     "@isl-lang/isl-smt": "workspace:*",
     "@isl-lang/isl-verify": "workspace:*",
     "@isl-lang/parser": "workspace:*",
-    "@isl-lang/pbt": "workspace:*",
     "@isl-lang/pipeline": "workspace:*",
     "@isl-lang/isl-policy-engine": "workspace:*",
     "@isl-lang/policy-packs": "workspace:*",
