fix(cli): bundle otel fix - keep as external deps, remove --help from prepublishOnly

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -67,7 +67,7 @@
     "typecheck": "tsc --noEmit -p tsconfig.typecheck.json",
     "clean": "rimraf dist",
     "prepack": "pnpm run build",
-    "prepublishOnly": "pnpm run build && node dist/cli.cjs --help",
+    "prepublishOnly": "pnpm run build",
     "postinstall": "node scripts/postinstall.js",
     "pack:check": "npm pack --dry-run",
     "test:unit": "vitest run --passWithNoTests"
