--- a/packages/dashboard-web/package.json
+++ b/packages/dashboard-web/package.json
@@ -62,7 +62,8 @@
     "tailwindcss": "^3.4.1",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.0.0"
+    "vitest": "^1.0.0",
+    "@netlify/plugin-nextjs": "^5.10.0"
   },
   "author": "mevla",
   "license": "MIT",
