fix(dashboard-web): fix OAuth URLs, stripe webhook, netlify build config
- Replace hardcoded shipgate-backend.vercel.app with FRONTEND_URL env var in GitHub/Google OAuth routes
- Fix Google callback using RAILWAY_PUBLIC_DOMAIN -> FRONTEND_URL
- Add await to headers() call in stripe webhook (Next.js 14.2 requirement)
- Fix err type unknown in stripe webhook catch
- Restore npm install in netlify.toml build command for cloud builds

--- a/packages/dashboard-web/package.json
+++ b/packages/dashboard-web/package.json
@@ -66,20 +66,5 @@
     "@netlify/plugin-nextjs": "^5.10.0"
   },
   "author": "mevla",
-  "license": "MIT",
-  "type": "module",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "types": "./dist/index.d.ts",
-  "sideEffects": false,
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
-  ]
+  "license": "MIT"
 }
