fix: remove broken .claude/worktrees submodule entries, add to gitignore
- Remove 3 gitlink entries (focused-dubinsky, hopeful-golick, priceless-euler) that had no .gitmodules URL
- These were blocking Netlify cloud builds with fatal submodule init errors
- Add .claude/worktrees/ to .gitignore to prevent recurrence

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ packages/cli/*.tgz
 .vibecheck/screenshots/
 .vibecheck/scan-results.json
 .vibecheck/context-engine-ledger.json
+
+# Claude Code worktrees
+.claude/worktrees/
+
+# Local Netlify folder
+.netlify
