fix: pin Node 20 via .nvmrc, scope pnpm install to dashboard-web only
- Netlify was using Node v22.22.0 which breaks isolated-vm compilation
- pnpm was installing the entire monorepo including native modules not needed by dashboard-web
- Now uses pnpm --filter @isl-lang/dashboard-web... to install only required deps
- Added .nvmrc with Node 20 at repo root (Netlify respects this)

--- a/packages/dashboard-web/netlify.toml
+++ b/packages/dashboard-web/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install --legacy-peer-deps && npm run build"
+  command = "cd ../.. && pnpm install --filter @isl-lang/dashboard-web... && pnpm --filter @isl-lang/dashboard-web run build"
   publish = ".next"
 
 [build.environment]
