fix: update stale workspace references and regenerate pnpm lockfile after CLI rename to @shipgate/cli
Made-with: Cursor

--- a/demos/flagship-auth-payments/package.json
+++ b/demos/flagship-auth-payments/package.json
@@ -31,7 +31,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "shipgate": "workspace:*",
+    "@shipgate/cli": "workspace:*",
     "@isl-lang/islstudio": "workspace:*",
     "@isl-lang/parser": "workspace:*",
     "@isl-lang/isl-verify": "workspace:*",
