--- a/demos/repo-isl-verified/package.json
+++ b/demos/repo-isl-verified/package.json
@@ -22,7 +22,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
-    "shipgate": "workspace:^",
+    "@shipgate/cli": "workspace:^",
     "tsx": "^4.19.0",
     "typescript": "^5.6.0",
     "vitest": "^2.1.0"
