--- a/packages/shipgate-dashboard/netlify.toml
+++ b/packages/shipgate-dashboard/netlify.toml
@@ -1,9 +1,10 @@
 [build]
-  command = "npm install --legacy-peer-deps && npm run build"
+  command = "npx prisma generate && npm run build"
 
 [build.environment]
   NODE_VERSION = "20"
   NODE_OPTIONS = "--max-old-space-size=4096"
+  HUSKY = "0"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
