fix: set NEXTAUTH_URL to production domain in netlify.toml
Made-with: Cursor

--- a/packages/shipgate-dashboard/netlify.toml
+++ b/packages/shipgate-dashboard/netlify.toml
@@ -5,6 +5,7 @@
   NODE_VERSION = "20"
   NODE_OPTIONS = "--max-old-space-size=4096"
   HUSKY = "0"
+  NEXTAUTH_URL = "https://app.shipgate.dev"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
