fix: use NEXTAUTH_URL for OAuth redirect URIs to prevent Netlify internal URL mismatch
Made-with: Cursor

--- a/packages/shipgate-dashboard/.env.example
+++ b/packages/shipgate-dashboard/.env.example
@@ -11,8 +11,8 @@ GITHUB_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-# Optional: base URL for OAuth callbacks (defaults to request origin)
-# NEXTAUTH_URL=http://localhost:3001
+# Base URL for OAuth callbacks — REQUIRED in production (set to your domain)
+NEXTAUTH_URL=http://localhost:3001
 
 # Stripe (create at https://dashboard.stripe.com)
 STRIPE_SECRET_KEY=
