fix: set base and publish dir in dashboard netlify.toml to prevent double-path

--- a/packages/shipgate-dashboard/netlify.toml
+++ b/packages/shipgate-dashboard/netlify.toml
@@ -1,4 +1,6 @@
 [build]
+  base = "packages/shipgate-dashboard"
+  publish = ".next"
   command = "npx prisma generate && npm run build"
 
 [build.environment]
